# pyREyes

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/scripts/: SerialEMsettings-scripts_CETA-D.txt  SerialEMsettings-scripts_DE_Apollo.txt
docs/tutorials/: Configurable_SerialEM_params.md  Installation_guide.md
src/pyREyes/: REyes.py  append_targets_nav.py  create_final_targets_nav.py  dif_map.py  eucentricity.py  grid_squares.py  manual_squares.py  mnt_maps_targets.py  write_sorted_targets_nav.py
src/pyREyes/config/: filtering_options.json  microscope_configs.json
src/pyREyes/docs/: README_FULL.md
src/pyREyes/docs/modules/: diffraction-map.md  eucentricity.md  final-targets.md  grid-squares.md  manual-squares.md  map-plotter.md  monitor.md  navigation.md  targets.md
src/pyREyes/lib/: REyes_errors.py  REyes_logging.py  REyes_microscope_configurations.py  REyes_utils.py
src/pyREyes/lib/diffraction/: DiffractionDataProcessor.py
src/pyREyes/lib/grid_processing/: CentroidProcessor.py  GridProcessor.py  filtering_options.py
src/pyREyes/lib/image_processing/: CartImage.py  CartImage_utils.py  PlottingManager.py  image_processor.py
src/pyREyes/lib/ui/: REyes_ui.py
tools/diffraction_quality/: diffraction_quality.ipynb
